Update About page and add README file

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,11 @@
 <%- include("partials/header") -%>
 
-<h1>About</h1>
-<p><%= content %> </p>
+<h1>About this project</h1>
+<p>
+  It is backend project of simple blog website. It has function to create posts
+  with title and content via '/compose' page. All posts are stored in online
+  database hosted on MongoDB Atlas. Main goal of this project was to create app
+  using ejs template engine, express framework and MongoDB database. 
+</p>
 
 <%- include("partials/footer") -%>
